--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "boxicons": "^2.1.4",
     "react-bootstrap": "^2.10.2"
   },
   "devDependencies": {
